--- a/public/locales/ch/translation.json
+++ b/public/locales/ch/translation.json
@@ -1,10 +1,10 @@
 {
-  "About": "关于",
-  "ME": "我",
-  "Home": "主页",
-  "Projects": "项目",
-  "CV": "简历",
+  "nav-home": "主页",
+  "nav-about": "关于我",
+  "nav-projects": "项目",
+  "nav-resume": "简历",
 
+  "ME": "我",
   "Hi Everyone, I am": "大家好，我是",
   "Tao Weijie": "陶伟杰",
   "from Paris, France.": "来自法国巴黎。",
