fix: translation for home page 2

--- a/public/locales/ch/translation.json
+++ b/public/locales/ch/translation.json
@@ -4,29 +4,10 @@
   "nav-projects": "项目",
   "nav-resume": "简历",
 
-  "ME": "我",
-  "Hi Everyone, I am": "大家好，我是",
-  "Tao Weijie": "陶伟杰",
-  "from Paris, France.": "来自法国巴黎。",
-  "Currently I'm pursuing": "目前我正在专攻",
-  "computer engineer degree": "计算机工程师学位",
-  "at Epitech Paris": "，就读于巴黎的欧洲理工学院",
-  "and I'm planning to study": "未来准备进修",
-  "Computational Intelligence MSC.": "人工智能硕士",
-  "I'm fluent in English, French and Chinese, I am very passionate about traveling": "我精通英语，法语和中文，也非常热爱旅行和探索",
-  "During my spare time, some other activities that I love to do!": "在我的业余时间，我喜欢做一些其他的事情！",
-  "FPV aircraft model": "FPV飞行器模型",
-  "Playing Games": "电子游戏",
-  "Travelling": "旅游",
-  "Professional": "专业",
-  "Skillset": "技能",
-  "Tools": "常用",
-  "I use": "工具",
-  "Days I": "代码",
-  "Code": "日历",
+  "common-hello": "你好",
+  "common-i-am": "我是",
+  "common-about": "关于",
 
-  "Hello": "你好",
-  "I'M": "我是",
   "Tao weijie": "陶伟杰",
   "LET ME": "让我",
   "INTRODUCE": "介绍一下",
@@ -45,6 +26,27 @@
   "Feel free to": "随时",
   "contact": "联系",
   "me": "我",
+
+  "ME": "我",
+  "Hi Everyone, I am": "大家好，我是",
+  "Tao Weijie": "陶伟杰",
+  "from Paris, France.": "来自法国巴黎。",
+  "Currently I'm pursuing": "目前我正在专攻",
+  "computer engineer degree": "计算机工程师学位",
+  "at Epitech Paris": "，就读于巴黎的欧洲理工学院",
+  "and I'm planning to study": "未来准备进修",
+  "Computational Intelligence MSC.": "人工智能硕士",
+  "I'm fluent in English, French and Chinese, I am very passionate about traveling": "我精通英语，法语和中文，也非常热爱旅行和探索",
+  "During my spare time, some other activities that I love to do!": "在我的业余时间，我喜欢做一些其他的事情！",
+  "FPV aircraft model": "FPV模型",
+  "Playing Games": "电子游戏",
+  "Travelling": "旅游",
+  "Professional": "专业",
+  "Skillset": "技能",
+  "Tools": "常用",
+  "I use": "工具",
+  "Days I": "代码",
+  "Code": "日历",
 
   "Projects and": "项目和",
   "Experiences": "工作经历",
