--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -2,5 +2,9 @@
   "nav-home": "Home",
   "nav-about": "About",
   "nav-projects": "Projects",
-  "nav-resume": "CV"
+  "nav-resume": "CV",
+
+  "common-hello": "Hello",
+  "common-i-am": "I am",
+  "common-about": "About"
 }
