[add] tailwind css

--- a/public/locales/ch/translation.json
+++ b/public/locales/ch/translation.json
@@ -4,7 +4,7 @@
   "nav-projects": "项目",
   "nav-resume": "简历",
 
-  "common-hello": "你好",
+  "common-hello": "欢迎来到我的个人网站",
   "common-i-am": "我是",
   "common-about": "关于",
 
