--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -4,7 +4,7 @@
   "nav-projects": "Projects",
   "nav-resume": "CV",
 
-  "common-hello": "Hello",
+  "common-hello": "Welcome to my website!",
   "common-i-am": "I am",
   "common-about": "About"
 }
