fix: traslation error for code calende

--- a/public/locales/ch/translation.json
+++ b/public/locales/ch/translation.json
@@ -1,4 +1,9 @@
 {
+  "and": "和",
+  "Feel free to": "随时",
+  "contact": "联系",
+  "me": "我",
+
   "nav-home": "主页",
   "nav-about": "关于我",
   "nav-projects": "项目",
@@ -12,19 +17,15 @@
   "LET ME": "让我",
   "INTRODUCE": "介绍一下",
   "MYSELF": "自己",
-  "Programming is an art, like writing poetry": "编程是一门艺术，就像写诗一样",
-  "I am proficient in classics like": "我熟悉以下经典语言",
-  "My field of Interest's are": "我的兴趣领域是",
-  "software development, web development, algorithms": "软件开发, Web开发, 算法",
-  "and also in areas related to": "还有",
-  "Artificial Intelligence": "人工智能",
-  "I also apply my passion for developing products with": "我也热衷于使用以下技术开发产品：",
-  "and": "和",
-  "Modern Javascript Library and Frameworks": "Javascript主流的库和框架",
-  "like": "比如",
-  "Feel free to": "随时",
-  "contact": "联系",
-  "me": "我",
+
+  "common-introduce-body-1": "资深软件工程师，熟悉软件开发的业务和流程，并且提供以下服务： ",
+  "common-introduce-body-1-1": "项目构建，技术优化，课程辅导. . .",
+  "common-introduce-body-2": "我熟悉以下主流编程语言： ",
+  "common-introduce-body-2-1": "当然，还有一些知名的框架：",
+  "common-introduce-body-2-2": "和一些常用的数据库：",
+  "common-introduce-body-3": "以下是我热衷的领域：",
+  "common-introduce-body-3-1": "桌面/移动端开发，网站开发，物联网和人工智能，\n\n",
+  "common-introduce-body-4": "我提倡敏捷开发和构建一个良好的DevOps生态, 对产品交付上精益求精。",
 
   "ME": "我",
   "Hi Everyone, I am": "大家好，我是",
@@ -44,8 +45,6 @@
   "Skillset": "技能",
   "Tools": "常用",
   "I use": "工具",
-  "Days I": "代码",
-  "Code": "日历",
 
   "Projects and": "项目和",
   "Experiences": "工作经历",
