--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -10,7 +10,7 @@
 
   "common-introduce": "LET ME INTRODUCE MYSELF",
   "common-introduce-body-1": "As a software engineer, I bring the expertise needed to develop your software. I offer a wide range of services, including ",
-  "common-introduce-body-1-1": "Developing your application, Open Classes, and Programming Guidance.",
+  "common-introduce-body-1-1": "Developing your application, Open Classes, and Programming Guidance. . .",
   "common-introduce-body-2": "I excel in various programming languages, including ",
   "common-introduce-body-2-1": "As well as modern frameworks like",
   "common-introduce-body-2-2": "and some popular databases",
