--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -6,15 +6,20 @@
 
   "common-hello": "Welcome to my website!",
   "common-i-am": "I am",
-  "common-about": "About",
+  "common-name": "Tao Weijie",
 
   "common-introduce": "LET ME INTRODUCE MYSELF",
-  "common-introduce-body-1": "As a software engineer, I bring the expertise needed to develop your software. I offer a wide range of services, including ",
-  "common-introduce-body-1-1": "Developing your application, Open Classes, and Programming Guidance. . .",
+  "common-introduce-body-1": "Hi Everyone, I am ",
+  "common-introduce-body-1-1": " a software engineer.\n\nI graduated from Epitech Paris with ",
+  "common-introduce-body-1-2": "an engineering degree and pursued a Master's degree in AIoT.\n\n",
   "common-introduce-body-2": "I excel in various programming languages, including ",
   "common-introduce-body-2-1": "As well as modern frameworks like",
-  "common-introduce-body-2-2": "and some popular databases",
-  "common-introduce-body-3": "With a strong passion for ",
-  "common-introduce-body-3-1": "software development, web development, algorithms, and artificial intelligence.\n\n",
-  "common-introduce-body-4": "I advocate for agile methodologies and thrive in team settings to deliver exceptional products."
+  "common-introduce-body-4": "I advocate for agile methodologies and thrive in team settings to deliver exceptional products.",
+
+  "common-services": "SERVICES",
+  "common-services-1": "I OFFER",
+  "common-service-body-1": "As a software engineer, I bring the expertise needed to develop your software. I offer a wide range of services, including ",
+  "common-service-body-1-1": "Developing your application, Open Classes, and Programming Guidance. . .",
+  "common-service-body-2": "With a strong passion for ",
+  "common-service-body-2-1": "software development, web development, algorithms, and artificial intelligence.\n\n"
 }
