feat: services page

--- a/public/locales/ch/translation.json
+++ b/public/locales/ch/translation.json
@@ -1,6 +1,6 @@
 {
   "and": "和",
-  "Feel free to": "随时",
+  "Click to": "随时",
   "contact": "联系",
   "me": "我",
 
@@ -31,23 +31,12 @@
   "common-services": "我提供的",
   "common-services-1": "服务",
   "common-service-body-1": "资深软件工程师，熟悉软件开发的业务和流程，并且提供以下服务： ",
-  "common-service-body-1-1": "项目构建，技术优化，课程辅导. . .",
+  "common-service-body-1-1": "桌面/移动应用程序开发，电商网站开发，企业管理系统开发和课程辅导. . .",
+  "common-service-body-2":"得益于我在",
+  "common-service-body-2-1":"软件开发，DevOps，云计算，人工智能和物联网",
+  "common-service-body-2-2":"领域的热情和专业知识，保证为您提供最优质的服务。",
+  "common-service-body-3": "如有任何问题，请随时联系或进一步讨论您的项目🤝",
 
-
-  "ME": "我",
-  "Hi Everyone, I am": "大家好，我是",
-  "Tao Weijie": "陶伟杰",
-  "from Paris, France.": "来自法国巴黎。",
-  "Currently I'm pursuing": "目前我正在专攻",
-  "computer engineer degree": "计算机工程师学位",
-  "at Epitech Paris": "，就读于巴黎的欧洲理工学院",
-  "and I'm planning to study": "未来准备进修",
-  "Computational Intelligence MSC.": "人工智能硕士",
-  "I'm fluent in English, French and Chinese, I am very passionate about traveling": "我精通英语，法语和中文，也非常热爱旅行和探索",
-  "During my spare time, some other activities that I love to do!": "在我的业余时间，我喜欢做一些其他的事情！",
-  "FPV aircraft model": "FPV模型",
-  "Playing Games": "电子游戏",
-  "Travelling": "旅游",
   "Professional": "专业",
   "Skillset": "技能",
   "Tools": "常用",
