--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -19,8 +19,9 @@
   "common-services": "SERVICES",
   "common-services-1": "I OFFER",
   "common-service-body-1": "As a software engineer, I bring the expertise needed to develop your software.\n\n I offer a wide range of services, including ",
-  "common-service-body-1-1": "Developing your application, Open Classes, and Programming Guidance. . .",
+  "common-service-body-1-1": "App development, E-commerce website, ERP development and Open Class Room",
   "common-service-body-2": "With a strong passion for ",
-  "common-service-body-2-1": "software development, web development, algorithms, and artificial intelligence.",
-  "common-service-body-2-2": "ensuring tailored solutions for your needs."
+  "common-service-body-2-1": "software engineering, Devops and AIoT,",
+  "common-service-body-2-2": "ensuring tailored solutions for your needs.",
+  "common-service-body-3": "Feel free to reach out for any questions or to discuss your project further🤝"
 }
