--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -23,5 +23,12 @@
   "common-service-body-2": "With a strong passion for ",
   "common-service-body-2-1": "software engineering, Devops and AIoT,",
   "common-service-body-2-2": "ensuring tailored solutions for your needs.",
-  "common-service-body-3": "Feel free to reach out for any questions or to discuss your project further🤝"
+  "common-service-body-3": "Feel free to reach out for any questions or to discuss your project further🤝",
+
+  "common-projects": "PROJECTS",
+  "common-experiences": "EXPERIENCES",
+  "project-1": "Full-stack (Next, Nest, Mongodb, Docker-compose, and Cloud VPS + Nginx.)\n\nBuilt an e-commerce site allowing customers to purchase personalized clothing.\nIntegrated Stripe, Google, and Cloudinary APIs for an enhanced user experience.\nImplemented a highly modular backend server adhering to REST standards.\n\nDeployed test and production versions using technologies such as Docker Compose on the OVH server with nginx configured.",
+  "project-2": "Full-stack (Angular, Nodejs, Express, Mongodb, Docker-compose)\n\nMaintaining an administration interface for managing orders, inventory, and generating personalized invoices using technologies such as Angular and Tailwind CSS.\n\nThe server is based on a microservices architecture with Hapi, and deployment is automated using to GitLab CI/CD and Docker Compose.",
+  "project-3": "DevOps (docker-compose, Apache Hadoop with Talent Studio)\n\nContainerize a back-end service project for OnPremise deployment. Use docker, docker-compose and dockerHub to reduce installation costs.\n\nFollowing the first step, approve the service in Cloud mode (AWS).",
+  "project-4":"Programming teacher\n(Application development, DevOps, Microservices, AIoT)\n\nPreparation of PowerPoint presentations, exercises, and tutorials.\n\nProposal of DevOps, application development, and microservices courses to a group of around twenty people.\n\n."
 }
