perf: remove unused image

--- a/public/locales/ch/translation.json
+++ b/public/locales/ch/translation.json
@@ -32,9 +32,9 @@
   "common-services-1": "服务",
   "common-service-body-1": "资深软件工程师，熟悉软件开发的业务和流程，并且提供以下服务： ",
   "common-service-body-1-1": "桌面/移动应用程序开发，电商网站开发，企业管理系统开发和课程辅导. . .",
-  "common-service-body-2":"得益于我在",
-  "common-service-body-2-1":"软件开发，DevOps，云计算，人工智能和物联网",
-  "common-service-body-2-2":"领域的热情和专业知识，保证为您提供最优质的服务。",
+  "common-service-body-2": "得益于我在",
+  "common-service-body-2-1": "软件开发，DevOps，云计算，人工智能和物联网",
+  "common-service-body-2-2": "领域的热情和专业知识，保证为您提供最优质的服务。",
   "common-service-body-3": "如有任何问题，请随时联系或进一步讨论您的项目🤝",
 
   "Professional": "专业",
@@ -42,14 +42,13 @@
   "Tools": "常用",
   "I use": "工具",
 
-  "Projects and": "项目和",
   "Experiences": "工作经历",
-  "My work experience and personal projects are listed below.": "我的工作经历和个人项目如下所示。",
-  "Fullstack Developer -- Smartx": "全栈工程师 -- Smartx",
-  "Maintain an enterprise order management system written in Angular Node.js and Mongodb.\n\nLeveraging my expertise in Angular and Mongodb, I successfully implemented a system to track the flow of orders, shipping and receiving information, and the status of products in the warehouse.\n\n My contributions led to an efficient and streamlined order management process, which significantly improved productivity and customer satisfaction.\n\nBy ensuring that authentication is required to access the platform, we maintained the highest level of security for our clients' data.": "维护用Angular Node.js和Mongodb编写的企业订单管理系统。\n\n我充分发挥了自己在Angular和Mongodb方面的专业知识，成功实现了该系统，用于跟踪订单流程、发货和收货信息以及仓库中产品的状态。\n\n我们项目显著提高了办公效率并且简化了订单管理过程，大大提高了生产率和客户满意度。\n\n通过确保访问平台需要身份验证，我们为客户的数据保持了最高水平的安全性。",
-  "Freelance Project -- FinanceAPI": "自由职业者项目 -- FinanceAPI",
-  "It's a web platform built with React, Node.js, and MongoDB, designed to efficiently manage orders and invoices.\n\nThe user-friendly dashboard provides a comprehensive list of orders, along with integration of bank statements and reimbursement forms.\n\nThe platform also includes a Fund Management System and the ability to create new orders and data can be easily exported in Excel format for convenience.\n\nAuthentication is required to access the platform, ensuring security and privacy for all users.": "这是一个用React，Node.js和MongoDB构建的Web平台，旨在有效地管理订单和发票。\n\n用户友好的仪表板提供了订单的全面列表，以及银行对账单和报销单的集成。\n\n该平台还包括资金管理系统，可以创建新订单，并且可以轻松地以Excel格式导出数据，以方便使用。\n\n访问平台需要身份验证，确保所有用户的安全和隐私。",
-  "DevOps Developer -- DataRaise": "DevOps工程师 -- DataRaise",
-  "My responsibility was to containerize a Talend Studio back service using Docker and Docker-compose for deployment.\n\nThrough my expertise in containerization and deployment, I successfully implemented this method, resulting in a significant improvement in the project's efficiency and scalability.\n\nContainerization allowed the project to be easily deployed and managed, while Docker-compose enabled the management of multiple containers as a single application.\n\nThis approach not only made the project more efficient but also reduced the time and effort required for deployment and maintenance.": "我的职责是使用Docker和Docker-compose容器化Talend Studio后端服务以进行部署。\n\n通过我在容器化和部署方面的专业知识，我实现了项目的容器化，从而显著提高了安装的效率和可扩展性。\n\n容器化使项目可以轻松部署和管理，而Docker-compose则允许将多个容器作为单个应用程序进行管理。\n\n这种方法不仅使项目更加高效，而且还减少了部署和维护所需的时间和精力。",
-  "OWL is a mobile application that monitors driver condition through a connected watch and phone.\n\nThe watch and phone can detect signs of drowsiness or the risk of dozing off.\n\nIf such signs are detected, the driver's phone will alert them and advise them to stop to prevent any accidents.": "OWL是一款通过连接手表来检测司机身体指标的手机app。\n\n手表可以检测到疲劳或打盹的迹象并传输给手机。\n\n如果检测到这些迹象，司机的手机将提醒他们并建议他们停车休息以防止事故的发生。"
+  "Projects": "项目",
+  "project-subtitle": "下面是我的工作经历和项目经验",
+  "project-1-h": "Project Leader -- E.Design",
+  "project-1": "Full-stack (Next, Nest, Mongodb, Docker-compose, and Cloud VPS + Nginx.)\n\nBuilt an e-commerce site allowing customers to purchase personalized clothing.\nIntegrated Stripe, Google, and Cloudinary APIs for an enhanced user experience.\nImplemented a highly modular backend server adhering to REST standards.\n\nDeployed test and production versions using technologies such as Docker Compose on the OVH server with nginx configured.",
+  "project-2-h": "Fullstack Developer -- Smartx",
+  "project-2": "Full-stack (Angular, Nodejs, Express, Mongodb, Docker-compose)\n\nMaintaining an administration interface for managing orders, inventory, and generating personalized invoices using technologies such as Angular and Tailwind CSS.\n\nThe server is based on a microservices architecture with Hapi, and deployment is automated using to GitLab CI/CD and Docker Compose.",
+  "project-3-h": "DevOps Developer -- Dataraise",
+  "project-3": "DevOps (docker-compose, Apache Hadoop with Talent Studio)\n\nContainerize a back-end service project for OnPremise deployment. Use docker, docker-compose and dockerHub to reduce installation costs.\n\nFollowing the first step, approve the service in Cloud mode (AWS)."
 }
