--- a/public/locales/zh.json
+++ b/public/locales/zh.json
@@ -52,5 +52,9 @@
   "project-6": "创建一个自动化办公流程的平台，集成主流的Api，提高用户的工作效率。\n\n允许用户选择一个触发器和一个反应器来创建一个工作流。\n\n例如：\n触发器：当您收到一封带有预约时间电子邮件。\n反应器：它会使用预设的文案自动回复邮件并添加到日历安排。",
   "project-7-h": "物联网项目 -- OWL",
   "project-7": "一款通过连接的手表和手机监控驾驶员状况的移动应用程序。\n\n手表和手机可以检测到疲劳或打瞌睡的风险。\n\n如果检测到这些迹象，驾驶员的手机将提醒他们并建议他们停下来以防止任何事故。",
-  "project-dataEr-title": "项目负责人 -- DataEr"
+  "project-dataEr-title": "项目负责人 -- DataEr",
+  "project-dataEr-description": "DataER是一个数据共享平台，公司和研究人员可以在其中发布数据。\n统计学家和数据挖掘专家可以免费获取数据来训练人工智能产生最佳模型。\n我亲自完成了整个网站从开发到部署的整个过程。\n使用nextjs缓存大部分数据以提高SEO和浏览速度。",
+  "project-ztw-description": "基于Azure云服务平台，我帮助建筑公司ZTW开发了基于建筑规范文档的AI Rag服务。\n我负责网络爬取、数据清洗、数据集成、数据矢量化以及AI服务的连接。 \nAI服务已接入Bing搜索服务和矢量文档服务。\n截至目前，矢量数据库已拥有40万条记录，显着提高了AI答案的准确性。",
+  "project-ztw-title": "项目负责人 -- 助图网",
+  "project-talentYou-description": "Telentyou是一家结合教育和人工智能的初创公司。\n它利用AI技术定制生成课程，为每个人提供高效可追溯的学习计划和实时人工智能辅导。\n目前已通过融资获得12万欧元，下一阶段工作已开始。"
 }
